force-app/main/default/objects/SA_Accessory__c/SA_Accessory__c.object-meta.xml
<CustomObject>
    <label>SA Accessory</label>
    <nameField>
        <displayFormat>SAA-{0000000000}</displayFormat>
        <label>SA Accesories Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA Accessories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>