force-app/main/default/objects/SA_Accessory__c/fields/AccessoriesTradable__c.field-meta.xml
<CustomField>
    <fullName>AccessoriesTradable__c</fullName>
    <formula>Accessories_Master__r.ACM_TRADABLE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accessories Tradable</label>
    <type>Text</type>
</CustomField>