force-app/main/default/objects/SA_Accessory__c/fields/isNotDisplayedPDF__c.field-meta.xml
<CustomField>
    <fullName>isNotDisplayedPDF__c</fullName>
    <formula>IF(OR(TEXT(SAC_PACKAGE__c) = &apos;Y&apos;,  BEGINS(SAC_ACM_ACCSCD__c, &apos;GMS&apos;), BEGINS(SAC_ACM_ACCSCD__c, &apos;COE&apos;)) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isNotDisplayedPDF</label>
    <type>Checkbox</type>
</CustomField>