force-app/main/default/objects/SA_Accessory__c/fields/SA_ACM_ACCSDESC__c.field-meta.xml
<CustomField>
    <fullName>SA_ACM_ACCSDESC__c</fullName>
    <formula>Accessories_Master__r.ACM_ACCSDESC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>