force-app/main/default/objects/SA_Accessory__c/fields/SAC_ACM_ACCSCD__c.field-meta.xml
<CustomField>
    <fullName>SAC_ACM_ACCSCD__c</fullName>
    <formula>Accessories_Master__r.ACM_ACCSCD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accessories Code</label>
    <type>Text</type>
</CustomField>