force-app/main/default/objects/SA_Accessory__c/fields/SAC_COST__c.field-meta.xml
<CustomField>
    <fullName>SAC_COST__c</fullName>
    <formula>IF( TEXT(SAC_ACCSTRADE__c) = &apos;Y&apos;, &apos;S$ 0.00&apos;, IF(SAC_INCPRICE__c = &apos;INC&apos;, 
	&apos;INCLUSIVE&apos;,
	IF(SAC_ACCSCOST__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;S$ &quot; &amp;
	IF(ABS(SAC_ACCSCOST__c) &gt;= 1000000, TEXT(FLOOR(ABS(SAC_ACCSCOST__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	IF(ABS(SAC_ACCSCOST__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(SAC_ACCSCOST__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	RIGHT(TEXT(FLOOR(ABS(SAC_ACCSCOST__c))), 3) &amp; &quot;.&quot; &amp;
	IF(MOD(ABS(SAC_ACCSCOST__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(SAC_ACCSCOST__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(SAC_ACCSCOST__c) , 1), 2) * 100, 99))) &amp;
	IF(SAC_ACCSCOST__c &lt; 0, &quot;)&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Accessory Cost</label>
    <type>Text</type>
</CustomField>