force-app/main/default/objects/SA_Accessory__c/fields/SAC_INCPRICE__c.field-meta.xml
<CustomField>
    <fullName>SAC_INCPRICE__c</fullName>
    <label>Inclusive</label>
    <length>3</length>
    <type>Text</type>
</CustomField>