force-app/main/default/objects/SA_Accessory__c/fields/SAC_LINENO__c.field-meta.xml
<CustomField>
    <fullName>SAC_LINENO__c</fullName>
    <label>Line No</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>