force-app/main/default/objects/SA_Accessory__c/fields/SAC_PACKAGE__c.field-meta.xml
<CustomField>
    <fullName>SAC_PACKAGE__c</fullName>
    <label>Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>