force-app/main/default/objects/SA_Accessory__c/fields/SACQTY__c.field-meta.xml
<CustomField>
    <fullName>SACQTY__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>