force-app/main/default/objects/SA_Accessory__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipLabel>SA Accessories</relationshipLabel>
    <relationshipName>SA_Accessories</relationshipName>
    <type>Lookup</type>
</CustomField>