force-app/main/default/objects/SA_Accessory__c/fields/SOH_ACCSAMT__c.field-meta.xml
<CustomField>
    <fullName>SOH_ACCSAMT__c</fullName>
    <formula>Accessories_Master__r.AccsRateMaster__r.ARM_SALEPRICE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accs Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>